--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
-Origin=Nguyen Thanh (shin-dev)
-Label=shin-chan (N.Thanh) 
+Origin=Chienlove Repo
+Label=chienlove
 Suite=stable 
 Version=1.0
 Codename=ios
 Architecture=iphoneos-arm
 Components=main
-Description=Source Cydia Repo by Shin-chan (Nguyen Thanh) 
-Depiction=https://nguyenthanh1995.github.io/package/
+Description=Source Cydia Repo by Chienlove
+Depiction=https://chienlove.github.io/package/
