--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "fs-extra": "^9.0.1",
-    "md5-file": "^5.0.0"
+    "md5-file": "^5.0.0",
+    "vue": "^2.6.12"
   },
   "devDependencies": {
     "chalk": "^4.1.0"
